# avp-python

./: .gitignore  =1.0  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/: audit-docs.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: modal_cross_model_gguf.py  modal_hf_sanity.py  modal_llamacpp_gsm8k.py  modal_llamacpp_sanity.py  modal_smoke_gsm8k.py  modal_vllm_2agent.py  modal_vllm_2agent_same_prompt.py  modal_vllm_2agent_v2.py  modal_vllm_cross_model.py  modal_vllm_cross_model_1gpu.py  modal_vllm_cudagraph_check.py  modal_vllm_debug.py  modal_vllm_extend.py  modal_vllm_gsm8k.py  modal_vllm_gsm8k_parity.py  modal_vllm_gsm8k_v2.py  modal_vllm_integration.py  modal_vllm_multi_gpu_same_model.py  modal_vllm_multi_gpu_sanity.py  run_benchmarks.py
benchmarks/classeval/: __init__.py  agents.py  evaluate.py  pipeline_direct.py  pipeline_latent.py  pipeline_text.py  run_classeval.py
benchmarks/compiler/: __init__.py  agents.py  evaluate.py  pipeline_direct.py  pipeline_latent.py  pipeline_text.py  run_compiler.py
benchmarks/debate/: __init__.py  agents.py  evaluate.py  pipeline_direct.py  pipeline_latent.py  pipeline_text.py  run_debate.py
benchmarks/debugbench/: __init__.py  agents.py  evaluate.py  pipeline_direct.py  pipeline_latent.py  pipeline_rosetta.py  pipeline_text.py  pipeline_text_cross_model.py  run_debugbench.py
benchmarks/fanout/: __init__.py  agents.py  evaluate.py  pipeline_direct.py  pipeline_latent.py  pipeline_rosetta.py  pipeline_text.py  run_fanout.py
benchmarks/gsm8k/: agents.py  diagnose.py  evaluate.py  pipeline_direct.py  pipeline_hybrid.py  pipeline_latent.py  pipeline_text.py  run_gsm8k.py
benchmarks/gsm8k_2agent/: __init__.py  agents.py  evaluate.py  pipeline_direct.py  pipeline_latent.py  pipeline_logit_guided.py  pipeline_mid_layer.py  pipeline_rosetta.py  pipeline_rosetta_seq.py  pipeline_soft_vocab.py  pipeline_text.py  (+4 more)
docs/: BENCHMARKS.md  FRAMEWORK_INTEGRATION.md  PRODUCT_CONSTITUTION.md  VLLM_INTEGRATION.md
examples/: agent_demo.py  benchmark.py  cross_process_demo.py  mixed_model_demo.py  pack_unpack.py  quickstart.py  think_generate.py
learnings/: connector_abc_design_research_apr2026.md  framework_integration_pain_points_apr2026.md  vllm_dynamic_kv_growth_research_mar2026.md
notebooks/: avp_quick_start.ipynb
proto/: avp.proto
tests/: conftest.py  test_auto_rosetta.py  test_autogen_integration.py  test_codec.py  test_codec_v2.py  test_compression.py  test_connectors.py  test_context_store.py  test_crewai_integration.py  test_debug.py  test_deprecated.py  test_easy.py  test_easy_connector_param.py  test_easy_latent.py  test_errors.py  test_fallback.py  test_generate.py  test_handshake.py  test_high_level_api.py  test_integration.py  test_kv_cache.py  test_langchain_integration.py  test_latent_primitives.py  test_llamacpp_connector.py  test_logit_guided.py  test_metrics.py  test_mid_layer.py  test_ollama_connector.py  test_page_convert.py  test_realign.py  test_rosetta.py  test_session.py  test_smart_routing.py  test_spec_vectors.py  test_trained_projector.py  test_transport.py  test_types.py  test_universal.py  test_vllm_connector.py  test_vllm_cross_model.py  (+3 more)
(+92 files in other folders)
